Added more functionality

--- a/frontend/partials/head.ejs
+++ b/frontend/partials/head.ejs
@@ -19,17 +19,16 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <ul class="navbar-nav">
             <li class="navbar-brand nav-link btn btn-sm btn-primary mx-2">
-                <a class="navbar-brand" href="#">Middleton Library Management System</a>
+                <a class="navbar-brand" href="http://localhost:8080">Middleton Library Management System</a>
             </li>
             <li class="nav-link btn btn-sm btn-primary mx-2">
-                <a class="nav-link" href="#">Users</a>
+                <a class="nav-link" href="http://localhost:8080/login">Users</a>
             </li>
+
             <li class="nav-link btn btn-sm btn-primary mx-2">
-                <a class="nav-link" href="#">Books</a>
+                <a class="nav-link" href="http://localhost:8080/books">Books</a>
             </li>
-            <li class="nav-link btn btn-sm btn-primary mx-2">
-                <a class="nav-link" href="#">Borrow</a>
-            </li>
+
         </ul>
     </nav>
 </body>
